[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Nikos Terlemes <nick.terlemes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
tqdm = "^4.54.1"
matplotlib = "^3.3.3"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
plotly-express = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
